update font weight mixin/function

--- a/scss/terra.scss
+++ b/scss/terra.scss
@@ -1,8 +1,12 @@
+/**
+ * Terra Design System
+ * v.1.0.0
+ */
 
 // settings
-@import 'variables';
 @import 'functions';
 @import 'mixins';
+@import 'variables';
 
 // structure
 @import 'structure/flex';
